finished Amazon's five key usability metrics

--- a/usability-study/heuristic-evaluation.tex
+++ b/usability-study/heuristic-evaluation.tex
@@ -37,25 +37,31 @@ The \textbf{horizontal lists} have slightly different functionality depending on
 The \textbf{search bar}, \textit{Shop by \textbf{Department}} dropdown, and \textbf{horizontal lists} account for all the types of customers that enter Amazon's site. The mental models of the designers work incrdibly well because they have figured out a way to approach every customer.
 
 \subsection{Five key usability metrics}
-In order to illustrate the five key usability metrics, I will go over Amazon's buying process to illustrate these concepts.
+
 \subsubsection{Learnability}
-In terms of learnability, Amazon's site is designed well because it takes little to no time at all to learn how to use.
+In terms of the shopping process, Amazon's site is designed well because it takes little to no time at all to learn how to navigate it. The layout remains consistent throughout the every step of the way. As I mentioned previously, their website appeals to all types of customers which makes it very learnable. Through out every step of the way, the action required to get to the next step of the process is always on the right of the web page. The shopping process is very learnable.
+
+Yet, Amazon's account page takes some more time to learn. They inlcude many links of just text and options that most common shoppers do not use like \textit{Manage Bulk Gift Card Orders} and \textit{Manage Textbook Rentals}. It takes time to simply get familar with the layout.
+
+All in all, their interface is fairly learnable and takes not too much time to learn.
 
 \subsubsection{Efficiency}
-Amazon's checkout process is quite error-less. In order to buy a product, Amazon offers a few options for its customers. 
-They allow the customer to add their product to their shopping cart.
+Amazon's checkout process is quite error-less. In order to buy a product, Amazon offers a few options for completeing a purchase for its customers. 
 
+First, they allow the customer to add their product to their shopping cart. This process is efficient because, as mentioned previously, each subsequent step is always located in the same area.
 
-They also allow them to buy with 1-Click\textregistered, I didn't want them to get mad. This is quite incredible to use, it allows for the user to choose which address they ship to from that are of the screen. The only error that may arise from this is that each location saved in a user's account can have a default payment method. If a user forgets which payment method they have chosen for a given location to ship to, this can charge a different payment method.
+Second, they also allow customers to buy with 1-Click\textregistered\hspace{2 mm}(I didn't want them to get mad). This is quite incredibly efficient. It holds true to its name and really allows for a single click to purchase a product. Before clicking buy, it allows for the user to choose which address they ship to from that are of the screen.
+
+Overall, the whole process of using their website is efficient.
 
 \subsubsection{Errors}
+A potential error that may arise during shopping using the 1-Click\textregistered\hspace{2 mm}method, is that each location saved in a user's account can have a default payment method. If a user forgets which payment method they have chosen for a given location to ship to, this can charge a different payment method than they might have expected. Besides this, their website is error-free.
 
 \subsubsection{Memorability}
+In terms of memorability, Amazon's site utilizes the idea of keeping the link or button that completes an action on the right side of the page. This make it memorable because any user can expect to see similar actions on that side fo the page. Overall, Amazon's site is memorable.
+
 \subsubsection{Satisfaction}
-Amazon approaches satisfaction in an incredibly reasonable fashion. Since their interface is learnable, efficient (for the most part), and memorable, it is no suprise that Amazon's satisfaction is high.
-
-
-\subsection{Interaction design guidelines, principles, \& theories}
+Amazon approaches satisfaction in an incredibly reasonable fashion. Since their interface is learnable, efficient (for the most part), error free, and memorable. It is no suprise that Amazon's satisfaction is high.
 
 \pagebreak
 
