--- a/usability-study/heuristic-evaluation.tex
+++ b/usability-study/heuristic-evaluation.tex
@@ -10,13 +10,12 @@
 \begin{document}
 \maketitle
 
-In this heuristic evaluation, I mention the main three different types of customers that enter any given shopping site which are as follows:
+In this heuristic evaluation, I mention the main three different types of customers (which I will refer to throughout the paper) that enter any given shopping site which are as follows:
 \begin{enumerate}
 \item Customers who know what they want to buy 
 \item Customers who do not know what they want to buy
 \item Customers who have considered buying something, yet have not yet purchased said item
 \end{enumerate}
-I will refer to these types of customers throughout the evaluation.
 
 In terms of the five usability metrics, I define \textit{learnability} as the time to learn, \textit{efficiency} as speed of performance, \textit{errors} as rate of errors, \textit{memorability} as retention over time, and \textit{satisfaction} as subjective satisfaction.
 \pagebreak
@@ -25,16 +24,15 @@ In terms of the five usability metrics, I define \textit{learnability} as the ti
 
 \subsection{Mental model}
 
-Amazon's mental mondel is quite clear from the moment you land on their homepage. In order to illustrate the diesigner's mental models, I will focus on just the homepage.
-Amazon's designers carried this mental model about the types of customers that they are serving when they designed their website. Each of the types of customers can also be logged in or not, and Amazon accounted for these types in their design.
+Amazon's mental mondel is quite clear from the moment you land on their homepage. In order to illustrate the designer's mental models, I will focus on just the homepage. Amazon's designers carry a few mental model for the types of customers that they are serving. Each of the types of customers can also be logged in or not, and Amazon accounted for these types in their design.
 
-The \textbf{search bar} is there if the customer has a specific product in mind to buy. This allows the customer for a very refined search of what they are purchasing. This works extremely well because they designer has the mental model that they customer can simply type exactly what they are searching for, and this allows the customer to do so. There even is a dropdown on the left of the input field to search within a specific category. The search terms also tries to autocomplete the search so the customer can type less. A customer does not need to be logged in for this to work as Amazon has designed it.
+The \textbf{search bar} is there if the customer has a specific product in mind to buy. This allows the customer for a very refined search of what they are purchasing. This works extremely well because they designer has the mental model that they customer can simply type exactly what they are searching for, and this allows the customer to do so. There even is a drop-down on the left of the input field to search within a specific category. The search terms also tries to autocomplete the search so the customer can type less. A customer does not need to be logged in for this to work as Amazon has designed it.
 
-The \textit{Shop by \textbf{Department}} dropdown is there for the customers who want to shop but do not know what they want to buy. Their main cateogies are listed here with the most popular subcategories for those given categories. Yet, at the bottom of this dropdown, one can see a link to the \textit{Full Store Directory}. Thanks to both of these options, a customer who does not know what they want to buy has no problem figuring this out. Similarly to the search bar, a customer does not need to be logged in for this to be functional.
+The \textit{Shop by \textbf{Department}} drop-down is there for the customers who want to shop but do not know what they want to buy. Their main cateogies are listed here with the most popular subcategories for those given categories. Yet, at the bottom of this drop-down, one can see a link to the \textit{Full Store Directory}. Thanks to both of these options, a customer who does not know what they want to buy has no problem figuring this out. Similarly to the search bar, a customer does not need to be logged in for this to be functional.
 
-The \textbf{horizontal lists} have slightly different functionality depending on if a customer is logged in or not. In either case, many horizontally lists show up below the dropdown on the left which are mainly geared towards a customer who does not have a clear idea of what they exactly want to buy. If the customer is not logged in, the lists can be \textit{Included with Prime Membership at No Additional Cost}, \textit{What Other Customers Are Looking At Right Now}, etc. If a customer is logged in the lists change to \textit{More Items to Consider}, \textit{Related to Items You've Viewed}, \textit{New For You}, and \textit{Inspired by Your Shopping Trends}. They usually also include a list that begins with the words \textit{Reccomendations for You in} which is followed by a category of products that you might have been looking at recently. The horizontal lists can help a customer make a choice for any occasion, regardless if they are looged in or not.
+The \textbf{horizontal lists} have slightly different functionality depending on if a customer is logged in or not. In either case, many horizontally lists show up below the drop-down on the left which are mainly geared towards a customer who does not have a clear idea of what they exactly want to buy. If the customer is not logged in, the lists can be \textit{Included with Prime Membership at No Additional Cost}, \textit{What Other Customers Are Looking At Right Now}, etc. If a customer is logged in the lists change to \textit{More Items to Consider}, \textit{Related to Items You've Viewed}, \textit{New For You}, and \textit{Inspired by Your Shopping Trends}. They usually also include a list that begins with the words \textit{Reccomendations for You in} which is followed by a category of products that you might have been looking at recently. The horizontal lists can help a customer make a choice for any occasion, regardless if they are looged in or not.
 
-The \textbf{search bar}, \textit{Shop by \textbf{Department}} dropdown, and \textbf{horizontal lists} account for all the types of customers that enter Amazon's site. The mental models of the designers work incrdibly well because they have figured out a way to approach every customer.
+The \textbf{search bar}, \textit{Shop by \textbf{Department}} drop-down, and \textbf{horizontal lists} account for all the types of customers that enter Amazon's site. The mental models of the designers work incrdibly well because they have figured out a way to approach every customer.
 
 \subsection{Five key usability metrics}
 
@@ -63,24 +61,47 @@ In terms of memorability, Amazon's site utilizes the idea of keeping the link or
 \subsubsection{Satisfaction}
 Amazon approaches satisfaction in an incredibly reasonable fashion. Since their interface is learnable, efficient (for the most part), error free, and memorable. It is no suprise that Amazon's satisfaction is high.
 
+
+\subsection{Interaction Style}
+Amazon has chosen to mainly use the overall interaction style of Menus, Forms, and Dialogs. Form this style, Amazon employs Pull-Down Menus and.
+
+
 \pagebreak
+
+
 
 \section{eBay}
 
 \subsection{Mental model}
 
-Although specializing in a different kind of market than Amazon, eBay's mental models have many similarities to Amazon.
+eBay's mental models have many similarities to Amazon. Just like Amazon, their goal is to approach every type of customer that can navigate their website.
 
-Search bar autocompletes.
+The \textbf{search bar} is there if the customer has a specific agenda on their mind when they arrive at eBay. An autocompleting search bar allows the site to guess what the user wants to buy. Its purpose is clear and it fulfills its purpose quite nicely.
+
+eBay utilizes a similar concept as Amazon's horizontal lists. They also have lists as one navigates their main site further down, but these lists are created by users of the website. Examples include \textit{Namaste}, a list including all types of yoga products, \textit{Mellow Yellow}, a list geared towards yellow products, and \textit{Je T'aime... Moi Non Plus}, a Jane Birkin inspired list. These are geared for the people on eBay's site that are simply browsing with no clear intention of what they might want to buy. eBay also includes \textit{My Feed} for personal reccomendations for new products. These options clearly interact well with user's whose mental models are geared towards having eBay help them decide what they want to purchase.
+
+eBay realizes the power of simple interfaces. At the bottom of the page, they include a link to \textit{Legal \& More}. This section pops up with a ton of options that they deem to be less used, like \textit{Security center}, \textit{Business sellers}, etc. They are keeping more content that the user is inclinded to use in their experence right where they need it.. Most of the clicks that a user can take keeo them on the same page. For example, whenever you click on your name at the top of the page, a drop-down comes down with some options like \textit{Purchases} and \textit{Recently Viewed}. Amazon accomplishes the same with more dropdowns and more options for each drop-down. They include many options that the user simply wouldn't use. This simplification of what the user needs to access their account option is a move that really faciliates communication between the designer's mental model and the user's mental model.
+
+Overall, eBay's site approacches all types of mental models well and does so in a simplistic fashion.
 
 \subsection{Five key usability metrics}
 \subsubsection{Learnability}
-\subsubsection{Efficiency}
-\subsubsection{Errors}
-\subsubsection{Memorability}
-\subsubsection{Satisfaction}
+eBay's learnability is fairly high looking at our test results. It does not take a long time for a customer to learn how to navigate and utilize their site. Shopping for products is straightfoward enough. It might be less straightforward than Amazon. But in contrast, their account modofication and viewing pages are laid out in a way that allows for a much more learnable experience than Amazon, per say. 
 
-\subsection{Interaction design guidelines, principles, \& theories}
+\subsubsection{Efficiency}
+
+eBay is quite efficient. In terms of the checkout process, they include a way to purchase items called \textit{Buy it now}, something a la Amazon's 1-Click\textregistered.
+
+\subsubsection{Errors}
+eBay's rate of errors is 
+
+\subsubsection{Memorability}
+
+\subsubsection{Satisfaction}
+eBay trades off satisfaction for efficiency. Although they are more efficient when it comes to adding a credit card to an account, overall, users were less thrilled with the experience.
+
+\subsection{Interaction Style}
+
 
 \pagebreak
 
@@ -88,18 +109,49 @@ Search bar autocompletes.
 
 \subsection{Mental model}
 
-Looking at Shopzilla's main site, you can see that in their mental model users are inclined to type out what they are searching for. They are presented with a table of categories at the bottom of the page.
+Looking at Shopzilla's main site, you can see that in their mental model users are inclined to type out what they are searching for. Like the previous two, this search bar is geared towards the users that have a specific agenda in mind when they are shopping. Although it serves the same purpose as Amazon's and eBay's search does, Shopzilla's search does not auto-complete like the others.
 
-Shopzilla's search does not auto complete like Amazon and eBay's search bars do.
+For the customers that are looking to browse for a product, they are presented with a table of categories under the search bar. These simply show what the top categories are for any given time. This feature is awesome because it can show what the most popular items are at a specific time, yet it does fall short in some sense. As opposed to Amazon and eBay, a shopper can't really have a history for Shopzilla to work with. So the idea of keeping track of what users might like doesn't really play out like it would for Amazon or eBay. There is no \textit{my} Shopzilla.
+
+Bewtween the search bar and main categories that Shopzilla has on their page, they adequately bridge the gap between the designer's mental model and the user's model. For the purpose of their site, they have completed the bridge between the two in a relatively strong fashion. If Shopzilla was keeping data of specific users in order to personalize a shopping experience, then their current site would not adress the gap between mental models well. But since they do not, the connection they have created fares well for how simple it is.
+
+Shopzilla does not really address the third type of user is the same way that the other two do. Yes, shoppers can re-seach for a product they were thinking about. But, they do not provide options for remembering what they were exactly looking for earlier. This is where Amazon's \textit{Wish lists} and eBay's \textit{Lists} come into play.
 
 \subsection{Five key usability metrics}
 \subsubsection{Learnability}
-\subsubsection{Efficiency}
-\subsubsection{Errors}
-\subsubsection{Memorability}
-\subsubsection{Satisfaction}
+In terms of learnability, Shopzilla's interface is quite simple and doesn't require much time to learn how to use their site. This is where Shopzilla excels compared to the other two shopping sites. Since they are a site that simply aggregates products, all they have to focus on is content presentation. 
 
-\subsection{Interaction design guidelines, principles, \& theories}
+\subsubsection{Efficiency}
+Shopzilla's efficiency is also quite high due to their site's simplicity. Once a user familiarizes themselves with Shopzilla's website, the act of being inefficient and the probability of ineffieciency is quite low. When it came to list filtering, Shopzilla tore the competition down because they 
+
+\subsubsection{Errors}
+Shozilla's site offers no room for real errors. The rate of errors is quite low. For example, in the test of narrowing down a product simply by using list filtering, Shopzilla dominated the test. 
+
+
+\subsubsection{Memorability}
+Shopzilla's memorability is fairly high due to the sites simplicity. Is a user were to come back to Shopzilla's site and use it again after uite some time, there is nothing on their site to cause any issues with memorability. 
+
+
+\subsubsection{Satisfaction}
+In terms of subjective satisfaction, Shopzilla fares slighlt less than the other two. Since we still live in a world where \textit{flashy} and \textit{glamourus} products prevail, it is not surprigsing that Shopzilla's relative satisfaction is less than our other two competitors.
+
+\subsection{Interaction Style}
+
+\pagebreak
+
+\section{Summary}
+
+\subsection{Mental models}
+
+\subsection{Five key usability metrics}
+
+As an overall theme, a site's simplicity was very related to the way each performed in the usability metrics and how the designer and user communicated through their respective mental models.
+
+Shopzilla's site's simplicity is very important for all of its usuability metrics and the way in which it utilizes its mental models. Shopzilla has a clear want for efficiency when their users use their site.
+
+\subsection{Interaction Style}
+
+
 
 
 \end{document}
